--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,7 @@ body {
 
 .container {
   width: 80%;
-  /* height: 100vh; */
-  margin: 0 auto;
+  margin: 10px auto;
   display: grid;
   grid-template-columns: 80% 20%;
   grid-template-rows: repeat(auto-fit, 1fr);
@@ -41,7 +40,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: rem;
+  font-size: 2rem;
 }
 
 .blog {
@@ -50,12 +49,12 @@ p {
 
 .blog img {
   width: 100%;
-  height: 50%;
+  height: 150px;
   object-fit: cover;
 }
 
 .aboutme img {
-  width: 30px;
+  width: 20%;
   padding-top: 5px;
 }
 
