--- a/styles.css
+++ b/styles.css
@@ -8,80 +8,82 @@
   box-sizing: border-box;
 }
 
+.item {
+  background-color: white;
+  padding: 10px;
+}
+
 body {
-  background-color: rgb(238, 238, 238);
+  background-color: lightgray;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .container {
-  width: 80%;
-  margin: 10px auto;
+  margin: auto;
+  max-width: 1000px;
   display: grid;
-  grid-template-columns: 80% 20%;
-  grid-template-rows: repeat(auto-fit, 1fr);
+  grid-template-columns: 7fr 3fr;
+  grid-template-rows: 2fr 2fr 2fr 1.5fr 1.5fr 1fr 2fr;
   gap: 10px;
 }
 
-.item {
-  padding: 10px;
-  background-color: white;
-}
-
-p {
-  padding: 5px 0;
-}
-
-.header,
-.footer {
-  height: 100px;
-}
-
+.footer,
 .header {
   grid-column: span 2;
+  font-size: 2.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
 }
 
+.pop-post,
 .blog {
   grid-row: span 2;
 }
 
+.blog2 {
+  grid-row: span 3;
+}
+
+.blog2 img,
 .blog img {
   width: 100%;
-  height: 150px;
+  height: 50%;
   object-fit: cover;
 }
 
-.aboutme img {
-  width: 20%;
-  padding-top: 5px;
-}
-
-.pop-post {
-  display: flex;
-  flex-direction: column;
-  grid-row: span 2;
-}
-
 .pop-post img {
-  width: 80%;
-  padding: 5px;
+  width: 50%;
+  padding: 2.5px 0;
+}
+
+.aboutme img {
+  width: 15%;
+}
+
+h1 {
+  font-size: 3.5rem;
+}
+
+h2 {
+  font-size: 2.2rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
+p {
+  font-size: 1.3rem;
+}
+
+h2,
+h3,
+p {
+  line-height: 2rem;
+  padding: 5px 0;
 }
 
 .footer {
-  grid-column: span 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.6rem;
-}
-
-.blog,
-.aboutme,
-.pop-post,
-.followme {
-  font-size: 1.2rem;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  line-height: 2rem;
+  background-color: rgb(185, 185, 185);
 }
